widget/cocoa/nsChildView.h
@@ -543,6 +543,8 @@ public:
 
   bool IsPluginFocused() { return mPluginFocused; }
 
+  virtual nsIntPoint GetClientOffset() override;
+
 protected:
   virtual ~nsChildView();
 
